minor code adjusments and preparing for docker