@@ -1,2 +1,4 @@
 # Memesbot
-The bot should collect and sort your favorite memes into directories
+The bot should collect and sort your favorite memes by categories
+
+G1 garbage collector is using by default in this project. To check this run with JVM option:-Xlog:gc*
